adl-frontend/src/test/resources/unit/unsupported/error/semantic/attributes/my.c
/* Empty implementation file for frontend tests. */
